# GE-Sentinal

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
api/: main.py
dashboard/: app.py
data/corpus/: ban_waves.md  merch_clans.md  patch_notes_sample.md  rwt_explainer.md  venezuela_blackout_2019.md
data/outputs/: eval_report.json
data/outputs/memos/: alert_01_evidence.json  alert_01_item900039_1772637300.md  alert_02_evidence.json  alert_02_item900020_1772765700.md  alert_03_evidence.json  alert_03_item900013_1772401500.md  alert_04_evidence.json  alert_04_item900031_1772742300.md  alert_05_evidence.json  alert_05_item900006_1772894700.md
data/seed/real/: timeseries_5m_4151.json
db/migrations/: 001_timescale.sql
flows/: prefect_flow.py
notebooks/: 01_eda.ipynb
scripts/: fetch_real_seed.py
src/ge_sentinel/: api_client.py  causal.py  cli.py  config.py  db.py  detectors.py  evaluate.py  features.py  ingest.py  labeling.py  memo.py  pipeline.py  synthetic.py
src/ge_sentinel.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: conftest.py  test_api.py  test_core.py  test_pipeline.py
